# cmd/rest/api/routes.go
@@ -3,6 +3,16 @@ package api
 // CreateRoutes creates all app routes.
 func (s *Server) CreateRoutes() {
 	s.Router.Handle(
+		"/-/live",
+		s.EnableCORS(s.HandleCheckLive()),
+	).Methods("GET")
+
+	s.Router.Handle(
+		"/-/health",
+		s.EnableCORS(s.HandleCheckHealth()),
+	).Methods("GET")
+
+	s.Router.Handle(
 		"/users",
 		s.EnableCORS(s.Compress(s.HandleGetUsers())),
 	).Methods("GET")
